# tborf

./: BACKUP_20200414.txt  CMakeLists.txt  HybridMethods.cpp  HybridMethods.h  README.MD  StyleEvaluation.cpp  StyleEvaluation.h  main.cpp  update.sh
glib/: BasicGeometry.cpp  BasicGeometry.h  CMakeLists.txt  Color.cpp  PCLExtend.cpp  PCLExtend.h  SignalProcessing.cpp  SignalProcessing.h  Statistics.cpp  Statistics.h  StringExtend.cpp  StringExtend.h  Table.h  V3.hpp  VectorExtend.cpp  VectorExtend.h
matlab_scripts/: LocalDistance.m  ShowCSV.py  ShowRst.py  StyleEvaluation.m  StyleEvaluation.m~  show_pdf.py  untitled.m  untitled2.m  verify_pdf.m
python_scripts/: README.MD  StyleEvaluation.py  bash.sh  example_entropy.py  main.py  plot_model.py
python_scripts/01_D4_demonstration/: main.py
